added chat client

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,5 +79,8 @@ target_link_libraries(simple_receiver PRIVATE sockman)
 add_executable(simple_listener example/simple_listener.cpp)
 target_link_libraries(simple_listener PRIVATE sockman)
 
+add_executable(chat_client example/chat_client.cpp)
+target_link_libraries(chat_client PRIVATE sockman)
+
 
 endif(NOT WITHOUT_EXAMPLES)
