--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,5 +82,7 @@ target_link_libraries(simple_listener PRIVATE sockman)
 add_executable(chat_client example/chat_client.cpp)
 target_link_libraries(chat_client PRIVATE sockman)
 
+add_executable(chat_server example/chat_server.cpp)
+target_link_libraries(chat_server PRIVATE sockman)
 
 endif(NOT WITHOUT_EXAMPLES)
